syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractComplexDeviceComponentStateOneOfProto";

import "sdc/biceps/abstractcomplexdevicecomponentstate.proto";
import "sdc/biceps/vmdstate.proto";
import "sdc/biceps/mdsstate.proto";

message AbstractComplexDeviceComponentStateOneOfMsg {
  oneof abstract_complex_device_component_state_one_of {
    AbstractComplexDeviceComponentStateMsg abstract_complex_device_component_state = 1;
    VmdStateMsg vmd_state = 2;
    MdsStateMsg mds_state = 3;
  }
}
